[package]
name = "two_party_sm2"
version = "0.1.0"
edition = "2021"
authors = [
    "Liu Hongqing<iu.hong.qing@sjtu.edu.cn>",
]
keywords = [
    "sm2",
    "two-party-sm2",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = true }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
class_group ={ version = "0.6", default_features = false}

