[package]
name = "two_party_sm2"
version = "0.1.0"
edition = "2021"
authors = [
    "Liu Hongqing<iu.hong.qing@sjtu.edu.cn>",
]
keywords = [
    "sm2",
    "two-party-sm2",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[dependencies]
subtle = { version = "2" }
curv-kzen = { version = "0.9", default-features = true }
sha2 = "0.9"
class_group ={ version = "0.6", default_features = false}
stopwatch="0.0.7"

